--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MyWallet</title>
+    <title>ReProvas</title>
     <link rel="icon" href="./imgs/icon.svg" />
   </head>
   <body>
